--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,13 @@
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<sonar.organization>sandy660</sonar.organization>
-  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>		
-	</properties>
-	
-	<sonar.coverage.jacoco.xmlReportPaths>
-	      ${project.basedir}/coverage-report-aggregator/target/site/jacoco-aggregate/jacoco.xml
-	</sonar.coverage.jacoco.xmlReportPaths>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<jacoco.version>0.8.8</jacoco.version>
+		<sonar.coverage.jacoco.xmlReportPaths>${basedir}/target/jacoco_report/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+	    	<jacoco.path>${basedir}/target/jacoco_report</jacoco.path>
 
+		</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
