--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
+		<properties>
 		<sonar.organization>sandy660</sonar.organization>
   		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<jacoco.version>0.8.8</jacoco.version>
+		<jacoco.version>0.8.10</jacoco.version>
 		<sonar.coverage.jacoco.xmlReportPaths>${basedir}/target/jacoco_report/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 	    	<jacoco.path>${basedir}/target/jacoco_report</jacoco.path>
 		</properties>
