--- a/pom.xml
+++ b/pom.xml
@@ -13,26 +13,16 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
-		<properties>
 		<sonar.organization>sandy660</sonar.organization>
   		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<jacoco.version>0.8.10</jacoco.version>
-		<sonar.coverage.jacoco.xmlReportPaths>${basedir}/target/jacoco_report/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
-	    	<jacoco.path>${basedir}/target/jacoco_report</jacoco.path>
-		</properties>
-	
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
-		<dependency>
-		    <groupId>org.jacoco</groupId>
-		    <artifactId>jacoco-maven-plugin</artifactId>
-		    <version>0.8.10</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
@@ -46,8 +36,27 @@
 	</dependencies>
 	<build>
 		<plugins>
-			    <plugin>
-     				<artifactId>maven-pmd-plugin</artifactId>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.8</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-pmd-plugin</artifactId>
 				<configuration>
 					<includeTests>true</includeTests>
 					<minimumTokens>10</minimumTokens>
@@ -77,40 +86,6 @@
 
 		<finalName>calcwebapp</finalName>
 	</build>
-	 <profiles>
-	    <profile>
-	      <id>run-code-coverage</id>
-	      <properties>
-		<jacoco.excludes>*Lexer</jacoco.excludes>
-		<!-- jacoco.exec.file is defined in kie-parent -->
-		<!--suppress UnresolvedMavenProperty -->
-		<jacoco.agent.line>-javaagent:${settings.localRepository}/org/jacoco/org.jacoco.agent/${version.jacoco.plugin}/org.jacoco.agent-${version.jacoco.plugin}-runtime.jar=destfile=${jacoco.exec.file},append=true,excludes=${jacoco.excludes}</jacoco.agent.line>
-		<surefire.argLine>
-		  -Dfile.encoding=${project.build.sourceEncoding}
-		  ${jacoco.agent.line}
-		</surefire.argLine>
-	      </properties>
-	      <build>
-		<pluginManagement>
-		  <plugins>
-		    <plugin>
-		      <artifactId>maven-surefire-plugin</artifactId>
-		      <configuration>
-			<argLine>${surefire.argLine}</argLine>
-		      </configuration>
-		      <dependencies>
-			<dependency>
-			  <groupId>org.jacoco</groupId>
-			  <artifactId>org.jacoco.agent</artifactId>
-			  <version>${version.jacoco.plugin}</version>
-			  <classifier>runtime</classifier>
-			</dependency>
-		      </dependencies>
-		    </plugin>
-		  </plugins>
-		</pluginManagement>
-	      </build>
-	    </profile>
-	  </profiles>
+
 
 </project>
